KM-520: fixed explore page text alignment. IE text is no longer centered. Flex box IE bug.

--- a/src/components/explore/explorePage.scss
+++ b/src/components/explore/explorePage.scss
@@ -23,6 +23,15 @@
         font-size: 50%;
       }
     }
+
+    .flex-container {
+      display: flex;
+      height: 80%;
+      min-height: 80%;
+      flex-direction: column;
+      justify-content: center;
+      -ms-flex-pack: center;
+    }
   }
 }
 
